--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,6 +187,7 @@ workflows:
                db_name: ${TEST_DB_NAME}
 
           - aws-ecr/build-and-push-image:
+              name: push_dev_image
               repo: ${REPO}
               tag: test
               requires:
