--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,35 +91,34 @@ jobs:
         executor:
             name: node/default
         steps:
-            # - checkout
-            # - run :
-            #     name: Run DB Proxy
-            #     command: |
-            #       sudo apt-get update
-            #       sudo apt-get install wget
-            #       wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-265.0.0-linux-x86_64.tar.gz
-            #       tar -zxf google-cloud-sdk-*
-            #       cd google-cloud-sdk
-            #       pwd
-            #       ./install.sh --quiet
-            #       echo ${GOOGLE_AUTH} > ${HOME}/gcp-key.json
-            #       ./bin/gcloud auth activate-service-account --key-file ${HOME}/gcp-key.json
-            #       ./bin/gcloud --quiet config set project ${GCP_PROJECT}
-            #       export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/gcp-key.json
-            #       echo $GOOGLE_APPLICATION_CREDENTIALS
-            #       wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
-            #       chmod +x cloud_sql_proxy
-            #       nohup ./cloud_sql_proxy -dir=./cloudsql -instances=ekstepspeechrecognition:us-central1:crowdsourcedb=tcp:5432 &
-            #       sleep 25s
-            #       cat nohup.out
-            # - node/install-packages
+            - checkout
+            - run :
+                name: Run DB Proxy
+                command: |
+                  sudo apt-get update
+                  sudo apt-get install wget
+                  wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-265.0.0-linux-x86_64.tar.gz
+                  tar -zxf google-cloud-sdk-*
+                  cd google-cloud-sdk
+                  pwd
+                  ./install.sh --quiet
+                  echo ${GOOGLE_AUTH} > ${HOME}/gcp-key.json
+                  ./bin/gcloud auth activate-service-account --key-file ${HOME}/gcp-key.json
+                  ./bin/gcloud --quiet config set project ${GCP_PROJECT}
+                  export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/gcp-key.json
+                  echo $GOOGLE_APPLICATION_CREDENTIALS
+                  wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
+                  chmod +x cloud_sql_proxy
+                  nohup ./cloud_sql_proxy -dir=./cloudsql -instances=ekstepspeechrecognition:us-central1:crowdsourcedb=tcp:5432 &
+                  sleep 25s
+                  cat nohup.out
+            - node/install-packages
             - run:
                 name: Run DB Migrate
                 command: |
-                    # export DATABASE_URL=postgresql://${DEV_DB_USER}:${DEV_DB_PASS}@127.0.0.1/<< parameters.db_name >>
-                    # echo << parameters.db_name >>
-                    # npx db-migrate up
-                    echo dummy
+                    export DATABASE_URL=postgresql://${DEV_DB_USER}:${DEV_DB_PASS}@127.0.0.1/<< parameters.db_name >>
+                    echo << parameters.db_name >>
+                    npx db-migrate up
 
     db_migrate_aws:
         parameters:
@@ -134,7 +133,7 @@ jobs:
                 name: Run DB Migrate
                 command: |
                     echo << parameters.db_name >>
-                    export DATABASE_URL=postgresql://${DEV_DB_USER}:${DB_PASS_AWS}@{DB_HOST_AWS}/<< parameters.db_name >>
+                    export DATABASE_URL=postgresql://${DEV_DB_USER}:${DB_PASS_AWS}@${DB_HOST_AWS}/<< parameters.db_name >>
                     echo << parameters.db_name >>
                     echo $DATABASE_URL
                     npx db-migrate up
@@ -195,6 +194,7 @@ workflows:
               tag: test
               requires:
                  - node/test
+                 - migrate_test_aws
 
           - eks_fargate_deployment:
               name: dev_deployment_eks
@@ -222,7 +222,7 @@ workflows:
               repo: ${REPO}
               tag: prod
               requires:
-                #  - migrate_prod_aws
+                 - migrate_prod_aws
                  - approve_prod_deployment_eks
 
           - eks_fargate_deployment:
