--- a/deployments/k8s/deployment.yaml
+++ b/deployments/k8s/deployment.yaml
@@ -70,8 +70,10 @@ spec:
         ports:
         - containerPort: 8080
 
-        # resources:
-        #   limits:
-        #     cpu: 500m
-        #   requests:
-        #     cpu: 200m
+        resources:
+          limits:
+            cpu: 500m
+            memory: 1000Mi
+          requests:
+            cpu: 250m
+            memory: 500Mi
