--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           command: |
             aws eks --region ap-south-1 update-kubeconfig --name << parameters.cluster-name >>
             ENV_IMAGE_NAME=${AWS_ECR_ACCOUNT_URL}/${REPO}:<< parameters.env-name >>
-            kubectl set image deployment vakyansh vakyansh=$ENV_IMAGE_NAME
+            kubectl -n << parameters.env-name >> set image deployment vakyansh vakyansh=$ENV_IMAGE_NAME
             sed -e "s|IMAGE_NAME|$ENV_IMAGE_NAME|g" ${HOME}/project/deployments/k8s/deployment.yaml | kubectl -n << parameters.env-name >> apply  -f -
 
           name: Deploy container
