--- a/deployments/k8s/deployment.yaml
+++ b/deployments/k8s/deployment.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: vakyansh
-  replicas: 1
+  replicas: 3
   template:
     metadata:
       annotations:
@@ -74,5 +74,5 @@ spec:
 
         resources:
           limits:
-            cpu: 250m
-            memory: 500Mi
+            cpu: 2000m
+            memory: 2Gi
