--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/ekstep2/ektep-crowdsource-platform#readme",
   "dependencies": {
     "@getgauge/cli": "^1.1.7",
-    "@google-cloud/storage": "^4.7.0",
+    "@google-cloud/storage": "^5.8.1",
     "aws-sdk": "^2.851.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -42,6 +42,7 @@
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "pg-promise": "^10.5.2",
     "pm2": "^4.5.5",
     "regenerator-runtime": "^0.13.7",
