--- a/deployments/k8s/dbrefresher.yaml
+++ b/deployments/k8s/dbrefresher.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: refresh-data
 spec:
-  schedule: "*/4 * * * *"
+  schedule: "0 */2 * * *"
   jobTemplate:
     spec:
       template:
