|Heera+Umair+Sreejith| Add env variable to deployment yaml

--- a/deployments/k8s/deployment.yaml
+++ b/deployments/k8s/deployment.yaml
@@ -68,7 +68,17 @@ spec:
           valueFrom:
             secretKeyRef:
               name: vakyansh-secret
-              key: PORT         
+              key: PORT
+        - name: LAUNCH_USER
+          valueFrom:
+            secretKeyRef:
+              name: vakyansh-secret
+              key: LAUNCH_USER
+        - name: LAUNCH_IDS
+          valueFrom:
+            secretKeyRef:
+              name: vakyansh-secret
+              key: LAUNCH_IDS
         ports:
         - containerPort: 8080
 
