--- a/Dockerfile-dbRefresh
+++ b/Dockerfile-dbRefresh
@@ -7,7 +7,7 @@ RUN apt-get install -y sudo
 
 
 WORKDIR /usr/src/app
-COPY deployments/shared-files/db_queries.sql .
+COPY db_queries.sql .
 COPY db-refresher.sh .
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
 RUN unzip awscliv2.zip
