|Umair| gitignored files in public folder

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,9 @@ logs
 # Gauge - JavaScript node dependencies
 */node_modules
 .terraform
+
+public/*
+!public/img/*
+!public/favicon.ico
+!public/sitemap.xml
+!public/aud/*
