--- a/Dockerfile-dbRefresh
+++ b/Dockerfile-dbRefresh
@@ -7,7 +7,9 @@ RUN apt-get install -y sudo
 
 
 WORKDIR /usr/src/app
+RUN mkdir -p /usr/src/app/tb_files
 COPY db_queries.sql .
+COPY db_refresh.sql .
 COPY db-refresher.sh .
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
 RUN unzip awscliv2.zip
