--- a/deployments/k8s/dbrefresher.yaml
+++ b/deployments/k8s/dbrefresher.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: refresh-data
 spec:
-  schedule: "*/1 * * * *"
+  schedule: "0 */2 * * *"
   jobTemplate:
     spec:
       template:
@@ -34,10 +34,7 @@ spec:
                       name: vakyansh-secret
                       key: DB_PASS
                 - name: BUCKET_NAME
-                    valueFrom:
-                      secretKeyRef:
-                        name: vakyansh-secret
-                        key: BUCKET_NAME
+                  value: "static-content-vakyansh-dev"
                 - name: ENCRYPTION_KEY
                   valueFrom:
                     secretKeyRef:
@@ -58,8 +55,4 @@ spec:
                     secretKeyRef:
                       name: vakyansh-secret
                       key: region
-#              args:
-#                - /bin/sh
-#                - -c
-#                - echo "Db refresh Initiating...";echo "REFRESH MATERIALIZED VIEW contributions_and_demo_stats;" > db_refresh.sql;echo "INSERT INTO audit_load_log(tablename,username,command)  values('contributions_and_demo_stats','root','REFRESH');" >> db_refresh.sql;echo "REFRESH MATERIALIZED VIEW daily_stats_complete;" >> db_refresh.sql;echo "INSERT INTO audit_load_log(tablename,username,command) values('daily_stats_complete','root','REFRESH');" >> db_refresh.sql;cat db_refresh.sql;psql "postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}" -f db_refresh.sql;echo "Db refresh Complete!"
           restartPolicy: OnFailure
