--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
-    "watch": "nodemon src/server.js aws",
+    "watch": "gulp && nodemon src/server.js aws",
     "start-cluster": "pm2 start src/server.js -i 2",
     "test": "ENCRYPTION_KEY=CjksSAhoncsuosuy68sbLd35KkcHrSuwKJerEFCEWof= jest",
     "gulp": "gulp",
@@ -63,8 +63,10 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-minify": "^3.1.0",
-    "jest": "^26.6.3",
+    "gulp-replace-task": "^2.0.1",
     "nodemon": "^2.0.3",
+    "yargs": "^16.2.0",
+    "jest": "^26.6.3",
     "supertest": "^6.1.3"
   },
   "jest": {
