--- a/deployments/k8s/dbrefresher.yaml
+++ b/deployments/k8s/dbrefresher.yaml
@@ -2,7 +2,12 @@ apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: refresh-data
+
 spec:
+  template:
+  metadata:
+    annotations:
+      commit_sha: CIRCLE_SHA1
   schedule: "0 */2 * * *"
   jobTemplate:
     spec:
@@ -10,7 +15,7 @@ spec:
         spec:
           containers:
             - name: db-refresher
-              image: 535630329499.dkr.ecr.ap-south-1.amazonaws.com/db-refresher:dev
+              image: IMAGE_NAME_DB_REFRESHER
               imagePullPolicy: IfNotPresent
               env:
                 - name: DB_HOST
