--- a/deployments/k8s/dbrefresher.yaml
+++ b/deployments/k8s/dbrefresher.yaml
@@ -2,6 +2,8 @@ apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: refresh-data
+  labels:
+    app: CIRCLE_SHA1
 
 spec:
 
@@ -10,10 +12,6 @@ spec:
     spec:
       template:
         spec:
-          template:
-            metadata:
-              annotations:
-                commit_sha: CIRCLE_SHA1
           containers:
             - name: db-refresher
               image: IMAGE_NAME_DB_REFRESHER
