--- a/deployments/k8s/dbrefresher.yaml
+++ b/deployments/k8s/dbrefresher.yaml
@@ -38,7 +38,10 @@ spec:
                       name: vakyansh-secret
                       key: DB_PASS
                 - name: BUCKET_NAME
-                  value: "static-content-vakyansh-dev"
+                  valueFrom:
+                    secretKeyRef:
+                      name: vakyansh-secret
+                      key: STATIC_BUCKET_NAME
                 - name: ENCRYPTION_KEY
                   valueFrom:
                     secretKeyRef:
