|Heera| Add multiple tag to image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ workflows:
           name: push_dev_db_refresher_image
           repo: ${DB_REFRESHER_REPO}
           dockerfile: Dockerfile-dbRefresh
-          tag: dev, test, prod
+          tag: "dev,test,prod"
           requires:
             - migrate_dev_aws
 
