--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "gulp-minify": "^3.1.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "jest-when": "^3.2.1",
     "nodemon": "^2.0.3",
     "supertest": "^6.1.3"
   },
