--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
   aws-eks: circleci/aws-eks@1.0.3
   aws-cli: circleci/aws-cli@1.4.0
   kubernetes: circleci/kubernetes@0.11.2
+  aws-s3: circleci/aws-s3@2.0.0
 
 jobs:
   run_functional_tests:
