--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
   aws-eks: circleci/aws-eks@1.0.3
   aws-cli: circleci/aws-cli@1.4.0
   kubernetes: circleci/kubernetes@0.11.2
+  aws-s3: circleci/aws-s3@2.0.0
 
 jobs:
   run_functional_tests:
@@ -23,12 +24,28 @@ jobs:
             sudo apt-get install -y git-all gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libgbm-dev libappindicator1 libnss3 lsb-release xdg-utils wget
             sudo rm -rf /var/lib/apt/lists/*
             npm run functional_test -- --env <<parameters.env_name>>
-
   approve_to_deploy:
     docker:
       - image: circleci/node:13.4
     steps:
       - run: echo "Hold for approval"
+
+  build_ui_push_to_s3:
+    parameters:
+      env_name:
+        type: string
+      distributionId:
+        type: string
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/install-packages
+      - run: npm run gulp -- --env=<< parameters.env_name >>
+      - aws-s3/sync:
+          from: public/
+          to: 's3://${STATIC_CONTENT_BUCKET}-<< parameters.env_name >>'
+      - run: aws cloudfront create-invalidation --distribution-id << parameters.distributionId >> --paths '/*'
 
   db_migrate_aws:
     parameters:
@@ -47,7 +64,6 @@ jobs:
             echo << parameters.db_name >>
             echo $DATABASE_URL
             npx db-migrate up
-
   eks_fargate_deployment:
     executor: aws-eks/python3
     parameters:
@@ -71,7 +87,6 @@ jobs:
             ENV_IMAGE_NAME=${AWS_ECR_ACCOUNT_URL}/${REPO}:<< parameters.env-name >>
             ENV_IMAGE_NAME_DB_REFRESHER=${AWS_ECR_ACCOUNT_URL}/${DB_REFRESHER_REPO}:<< parameters.env-name >>
             kubectl -n << parameters.env-name >> apply  -f ${HOME}/project/deployments/k8s/autoscaler_<< parameters.env-name >>.yaml
-
             sed -e "s|IMAGE_NAME|$ENV_IMAGE_NAME|g;s/CIRCLE_SHA1/$CIRCLE_SHA1/g" ${HOME}/project/deployments/k8s/deployment.yaml | kubectl -n << parameters.env-name >> apply  -f -
             sed -e "s|IMAGE_NAME_DB_REFRESHER|$ENV_IMAGE_NAME_DB_REFRESHER|g;s/CIRCLE_SHA1/$CIRCLE_SHA1/g" ${HOME}/project/deployments/k8s/dbrefresher.yaml | kubectl -n << parameters.env-name >> apply  -f -
           name: Deploy container
@@ -90,6 +105,13 @@ workflows:
           filters:
             branches:
               only: master
+
+      - build_ui_push_to_s3:
+          name: build_dev_ui
+          env_name: dev
+          distributionId: ${DEV_DISTRIBUTION_ID}
+          requires:
+            - migrate_dev_aws
 
       - aws-ecr/build-and-push-image:
           name: push_dev_image
@@ -132,6 +154,13 @@ workflows:
           requires:
             - approve_test_deployment_eks
 
+      - build_ui_push_to_s3:
+          name: build_test_ui
+          env_name: test
+          distributionId: ${TEST_DISTRIBUTION_ID}
+          requires:
+            - migrate_test_aws
+
       - aws-ecr/build-and-push-image:
           name: push_test_image
           repo: ${REPO}
@@ -164,6 +193,13 @@ workflows:
           requires:
             - approve_prod_deployment_eks
 
+      - build_ui_push_to_s3:
+          name: build_prod_ui
+          env_name: prod
+          distributionId: ${PROD_DISTRIBUTION_ID}
+          requires:
+            - migrate_prod_aws
+
       - aws-ecr/build-and-push-image:
           name: push_prod_image
           repo: ${REPO}
@@ -177,3 +213,4 @@ workflows:
           env-name: prod
           requires:
             - push_prod_image
+            
