--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,11 +136,11 @@ workflows:
           requires:
             - push_dev_image
 
-      # - run_functional_tests:
-      #     name: functional_tests_dev
-      #     env_name: dev
-      #     requires:
-      #       - dev_deployment_eks      
+      - run_functional_tests:
+          name: functional_tests_dev
+          env_name: dev
+          requires:
+            - dev_deployment_eks      
 
       - approve_to_deploy:
           name: approve_test_deployment_eks
