--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,17 +175,17 @@ workflows:
           requires:
             - push_test_image
 
-      - run_functional_tests:
-          name: functional_tests_test
-          env_name: test
-          requires:
-            - test_deployment_eks
+      # - run_functional_tests:
+      #     name: functional_tests_test
+      #     env_name: test
+      #     requires:
+      #       - test_deployment_eks
 
       - approve_to_deploy:
           name: approve_prod_deployment_eks
           type: approval
           requires:
-            - functional_tests_test
+            - test_deployment_eks
 
       - db_migrate_aws:
           name: migrate_prod_aws
