--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "jest": "^26.6.3",
     "jest-when": "^3.2.1",
     "nodemon": "^2.0.3",
-    "yargs": "^16.2.0",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "yargs": "^16.2.0"
   },
   "jest": {
     "setupFiles": [
