--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
       name: node/default
     steps:
       - *fast-checkout
-      - run: cd project
+      - run: cd /home/circleci/project/
       - run: pwd
       - run: ls
       - node/install-packages
