--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,7 @@ jobs:
           name: Run DB Migrate
           command: |
             cd /home/circleci/project/
+            ls project
             npm i
             echo << parameters.db_name >>
             export DATABASE_URL=postgresql://${DEV_DB_USER}:${DB_PASS_AWS}@${DB_HOST_AWS}/<< parameters.db_name >>
