--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ orbs:
 definition:
   fast-checkout: &fast-checkout
     attach_workspace:
-      at: /home/circleci/project/
+      at: .
 
 jobs:
   create-workspace:
@@ -19,9 +19,9 @@ jobs:
       - checkout
       - run: rm -rf .git
       - persist_to_workspace:
-          root: /home/circleci/
+          root: .
           paths:
-            - project
+            - .
 
   run_functional_tests:
     parameters:
@@ -64,7 +64,6 @@ jobs:
       - run: aws cloudfront create-invalidation --distribution-id << parameters.distributionId >> --paths '/*'
 
   db_migrate_aws:
-    working_directory: /home/circleci/project
     parameters:
       db_name:
         type: string
@@ -75,8 +74,8 @@ jobs:
       - run:
           name: Run DB Migrate
           command: |
-            cd /home/circleci/project/
-            ls project
+            pwd
+            ls
             npm i
             echo << parameters.db_name >>
             export DATABASE_URL=postgresql://${DEV_DB_USER}:${DB_PASS_AWS}@${DB_HOST_AWS}/<< parameters.db_name >>
