--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,8 +112,13 @@ jobs:
 workflows:
   build_test_deploy:
     jobs:
+      - node/test:
+          version: "13.4"
+        
       - create-workspace:
           name: create-workspace
+          requires:
+             - node/test
 
       - db_migrate_aws:
           name: migrate_dev_aws
