Remove unused code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,6 @@ jobs:
       - run:
           name: Run DB Migrate
           command: |
-            pwd
             echo << parameters.db_name >>
             export DATABASE_URL=postgresql://${DEV_DB_USER}:${DB_PASS_AWS}@${DB_HOST_AWS}/<< parameters.db_name >>
             echo << parameters.db_name >>
@@ -133,7 +132,7 @@ workflows:
              - node/test
           filters:
             branches:
-              only: [master, circleci-workspace]
+              only: master
 
       - db_migrate_aws:
           name: migrate_dev_aws
