--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,22 @@ orbs:
   kubernetes: circleci/kubernetes@0.11.2
   aws-s3: circleci/aws-s3@2.0.0
 
+definition:
+  fast-checkout: &fast-checkout
+    attach_workspace:
+      at: .
+
 jobs:
+  create-workspace:
+    executor: node/default
+    steps:
+      - checkout
+      - run: rm -rf .git
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+
   run_functional_tests:
     parameters:
       env_name:
@@ -15,7 +30,7 @@ jobs:
     executor:
       name: node/default
     steps:
-      - checkout
+      - *fast-checkout
       - node/install-packages
       - run:
           name: Gauge tests
@@ -24,6 +39,7 @@ jobs:
             sudo apt-get install -y git-all gconf-service libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates fonts-liberation libgbm-dev libappindicator1 libnss3 lsb-release xdg-utils wget
             sudo rm -rf /var/lib/apt/lists/*
             npm run functional_test -- --env <<parameters.env_name>>
+
   approve_to_deploy:
     docker:
       - image: circleci/node:13.4
@@ -39,7 +55,7 @@ jobs:
     executor:
       name: node/default
     steps:
-      - checkout
+      - *fast-checkout
       - node/install-packages
       - run: npm run gulp -- --env=<< parameters.env_name >>
       - aws-s3/sync:
@@ -66,7 +82,7 @@ jobs:
     executor:
       name: node/default
     steps:
-      - checkout
+      - *fast-checkout
       - node/install-packages
       - run:
           name: Run DB Migrate
@@ -76,6 +92,7 @@ jobs:
             echo << parameters.db_name >>
             echo $DATABASE_URL
             npx db-migrate up
+
   eks_fargate_deployment:
     executor: aws-eks/python3
     parameters:
@@ -89,7 +106,7 @@ jobs:
         type: string
 
     steps:
-      - checkout
+      - *fast-checkout
       - aws-cli/setup:
           profile-name: circle-ci
       - kubernetes/install
@@ -109,14 +126,19 @@ workflows:
       - node/test:
           version: "13.4"
 
-      - db_migrate_aws:
-          name: migrate_dev_aws
-          db_name: ${DEV_DB_NAME}
+      - create-workspace:
+          name: create-workspace
           requires:
              - node/test
           filters:
             branches:
               only: master
+
+      - db_migrate_aws:
+          name: migrate_dev_aws
+          db_name: ${DEV_DB_NAME}
+          requires:
+             - create-workspace
 
       - build_ui_push_to_s3:
           name: build_dev_ui
@@ -130,7 +152,6 @@ workflows:
           repo: ${REPO}
           tag: dev
           requires:
-            #  - node/test
             - migrate_dev_aws
 
       - aws-ecr/build-and-push-image:
