--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
     executor: node/default
     steps:
       - checkout
-      - node/install
+      - node/install-packages
       - run: rm -rf .git
       - persist_to_workspace:
           root: .
