--- a/.gitignore
+++ b/.gitignore
@@ -124,8 +124,8 @@ logs
 */node_modules
 .terraform
 
-crowdsource-ui/target/public/*
-!crowdsource-ui/target/public/img/
-!crowdsource-ui/target/public/favicon.ico
-!crowdsource-ui/target/public/sitemap.xml
-!crowdsource-ui/target/public/aud/
+crowdsource-ui/target/*
+!crowdsource-ui/target/img/
+!crowdsource-ui/target/favicon.ico
+!crowdsource-ui/target/sitemap.xml
+!crowdsource-ui/target/aud/
