--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,7 +157,7 @@ workflows:
       - aws-ecr/build-and-push-image:
           name: push_dev_db_refresher_image
           repo: ${DB_REFRESHER_REPO}
-          dockerfile: Dockerfile-dbRefresh
+          dockerfile: db-refresher/Dockerfile-dbRefresh
           tag: "dev,test,prod"
           requires:
             - migrate_dev_aws
