--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,7 +158,7 @@ workflows:
           name: push_dev_db_refresher_image
           repo: ${DB_REFRESHER_REPO}
           dockerfile: Dockerfile-dbRefresh
-          path: db-refresher
+          path: ./db-refresher
           tag: "dev,test,prod"
           requires:
             - migrate_dev_aws
