--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,8 +158,7 @@ workflows:
       - aws-ecr/build-and-push-image:
           name: push_dev_db_refresher_image
           repo: ${DB_REFRESHER_REPO}
-          dockerfile: Dockerfile-dbRefresh
-          context: ./db-referesher
+          dockerfile: ./db-referesher/Dockerfile-dbRefresh
           path: ./db-referesher
           tag: "dev,test,prod"
           requires:
