--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,6 +159,7 @@ workflows:
           name: push_dev_db_refresher_image
           repo: ${DB_REFRESHER_REPO}
           dockerfile: ./db-referesher/Dockerfile-dbRefresh
+          context: ./db-referesher
           tag: "dev,test,prod"
           requires:
             - create-workspace
